feat: define reporter attribute mapping
AM-7552
