# gravitee-am-repository/gravitee-am-repository-jdbc/src/main/java/io/gravitee/am/repository/jdbc/management/api/model/JdbcReporter.java
@@ -57,6 +57,8 @@ public class JdbcReporter  {
     @Column("system")
     private boolean system;
     private boolean inherited;
+    @Column("attribute_mappings")
+    private String attributeMappings;
     @Column("managed_by")
     private String managedBy;
 
